--- a/minilang/public/index.html
+++ b/minilang/public/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Minilang</title>
-    <link rel="stylesheet" href="acquire.css" >
-    <link rel="stylesheet" href="font-awesome.css" >
+    <link rel="stylesheet" href="minilang.css" >
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="term"></div>
-    <script>
-    </script>
+    <div id="minilang"></div>
+    <script src="repl.js"></script>
 </body></html>
