--- a/minilang/public/index.html
+++ b/minilang/public/index.html
@@ -7,7 +7,10 @@
     <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
   </head>
   <body>
-    <input id="command" />
+    <div class="command">
+      <input id="command" class="disconnected" />
+      <img id="connect" src="images/connect.png" />
+    </div>
     <div id="minilang"></div>
     <script src="repl.js"></script>
 </body></html>
