--- a/minilang/public/index.html
+++ b/minilang/public/index.html
@@ -8,9 +8,11 @@
   </head>
   <body>
     <div class="command">
-      <input id="command" class="disconnected" />
-      <img id="connect" src="images/connect.png" />
+      <div>
+        <input id="command" class="disconnected" />
+        <img id="connect" src="images/connect.png" />
+      </div>
+      <div id="minilang"></div>
     </div>
-    <div id="minilang"></div>
     <script src="repl.js"></script>
 </body></html>
