--- a/minilang/public/index.html
+++ b/minilang/public/index.html
@@ -7,6 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div class="edit">
+      <textarea id="program" />
+    </div>
     <div class="command">
       <div>
         <input id="command" class="disconnected" />
