--- a/minilang/public/index.html
+++ b/minilang/public/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="edit">
-      <textarea id="program" />
+      <textarea id="program">
+      </textarea>
     </div>
     <div class="command">
       <div>
