--- a/minilang/public/index.html
+++ b/minilang/public/index.html
@@ -11,7 +11,7 @@
       <textarea id="program">
       </textarea>
     </div>
-    <div class="output">
+    <div class="repl">
       <div class="command">
         <input id="command" class="disconnected" />
         <img id="connect" src="images/connect.png" />
