--- a/minilang/public/index.html
+++ b/minilang/public/index.html
@@ -7,11 +7,11 @@
     <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="edit">
+    <div id="edit">
       <textarea id="program">
       </textarea>
     </div>
-    <div class="repl">
+    <div id="repl">
       <div class="command">
         <input id="command" class="disconnected" />
         <img id="connect" src="images/connect.png" />
