--- a/minilang/public/index.html
+++ b/minilang/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="edit">
+    <div class="edit">
       <textarea id="program">
       </textarea>
     </div>
