--- a/minilang/public/index.html
+++ b/minilang/public/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <div class="edit">
-      <textarea id="program">
-      </textarea>
+      <textarea id="program"></textarea>
+      <div>
+        <button id="send">Send</button>
+      </div>
     </div>
     <div id="repl">
       <div class="command">
