--- a/minilang/public/index.html
+++ b/minilang/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Minilang</title>
     <link rel="stylesheet" href="minilang.css" >
+    <link rel="icon"
+          type="image/png"
+          href="/pi.png">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
   </head>
   <body>
